# project_planner

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  langgraph.json  local_run.py  pyproject.toml  settings.py
agents/: __init__.py  executor.py  planner.py
nodes/: __init__.py  executor.py  planner.py  starter.py  summariser.py  task_extractor.py  utils.py
prompts/: __init__.py  executor.py  planner.py  summariser.py  task_extractor.py  text_extractor.py
rag_store/: store.py
rag_store/old_projects/: project1.txt  project2.txt
states/: __init__.py  state.py
tests/: test_integration.py
